grammars/tree-sitter-oberon2/grammar.js
    module: $ => choice(
      seq(
        $.module_header,
        optional($.import_list),
        optional($.const_decls),
        optional($.type_decls),
        optional($.variable_decls),
        repeat($.procedure_decls),
        optional(seq(
          $.kBegin,
          optional($.statement_seq)
        )),
        $.module_footer
      ),
      seq(
        $.definition_header,
        optional($.import_list),
        optional($.const_decls),
        optional($.type_decls),
        optional($.variable_decls),
        repeat($.definition_proc_decl),
        $.module_footer
      )
    ),
    module_header: $ => seq($.kModule, $.ident, ';'),
    module_footer: $ => seq($.kEnd, $.ident, '.'),

    // definition_proc_decl = procedure_heading ";"
    import_list: $ => seq(
      $.kImport,
      $.import,
      repeat(seq(
        ",",
        $.import
      )),
      ';'
    ),

    // import = ident [":=" ident]
    import: $ => seq(
      $.ident,
      optional(seq(
        ':=',
        $.ident
      ))
    ),

    // the following declarations are a bit of a hack
    // because of the empty string problem with the previous
    // one

    // const_decls = "CONST" {const_decl ";"}
    const_decls: $ => seq(
      $.kConst, 
      repeat(seq(
        $.const_decl, ';'
      ))
    ),

    // type_decls = "TYPE" {type_decl ";"}
    type_decls: $=> seq(
      $.kType, 
      repeat(seq(
        $.type_decl, ';'
      ))
    ),

    // variable_decls =["VAR" {variable_decl ";"}]
    variable_decls: $ => seq(
      $.kVar, 
      repeat(seq(
        $.variable_decl, ';'
      ))
    ),

    // procedure_decls = (procedure_decl | forward_decl) ";"
    const_decl: $ => seq(
      $.ident_def, '=', $.const_expression
    ),

    // const_expression = expression
    const_expression: $ =>  $.expression,

    // type_decl = ident_def "=" (qualident | struct_type)
    type_decl: $ => seq(
      $.ident_def, '=', $.type
    ),

    // struct_type = array_type | record_type | pointer_type | procedure_type
    struct_type: $ => choice(
      $.array_type,
      $.record_type,
      $.pointer_type,
      $.procedure_type
    ),

    // array_type = "ARRAY" length {"," length} "OF" type
    array_type: $ => seq(
      $.kArray, $.length, repeat(seq(',', $.length)), $.kOf, $.type
    ),

    // length = const_expression
    length: $ => $.const_expression,

    // record_type = "RECORD" ["(" base_type ")"] [field_list_seq] "END"
    record_type: $ => seq(
      $.kRecord,
      optional(seq(
        '(',
        $.base_type,
        ')'
      )),
      optional($.field_list_seq),
      $.kEnd
    ),

    // base_type = qualident
    base_type: $ => $.qualident,

    // field_list_seq = field_list {";" field_list}
    // FieldList is itself optional in the EBNF ([...]), same shape as StatementSeq — the
    // corpus relies on a trailing ";" before "END" (e.g. voc's Printer.Mod). Same two-branch
    // fix as statement_seq: every branch must still consume at least one token, so the
    // "totally empty" case is expressed by omitting field_list_seq at the call site
    // (already optional($.field_list_seq) in record_type), not by this rule matching nothing.
    field_list_seq: $ => choice(
      seq($.field_list, repeat(seq(';', optional($.field_list)))),
      repeat1(seq(';', optional($.field_list)))
    ),

    // field_list = [ident_list ":" type]
    field_list: $ => seq(
      $.ident_list, ':', $.type
    ),

    // ident_list = ident_def {"," ident_def}
    ident_list: $ => seq(
      $.ident_def, repeat(seq(',', $.ident_def))
    ),

    // pointer_type = "POINTER" "TO" type
    pointer_type: $ => seq(
      $.kPointer, $.kTo, $.type
    ),

    // procedure_type = "PROCEDURE" [formal_params]
    qualident: $ => prec.left(choice(
      seq($.ident),
      seq(field("qualifier", $.ident), '.', field("property", $.ident)),
    )),

    // ident_def = ident ["*" | "-"]
    ident_def: $ => seq(
      $.ident, optional(choice($.kStar, $.kMinus))
    ),

    // variable_decl = ident_list ":" type
    variable_decl: $ => seq(
      $.ident_list, ':', $.type
    ),

    // type = qualident | struct_type
    type: $ => choice(
      $.qualident,
      $.struct_type
    ),

    // procedure_decl = procedure_heading ";" procedure_body ident
    expression: $ => seq(
      $.simple_expression,
      optional(seq($.relation, $.simple_expression))
    ),

    // relation = "=" | "#" | "<" | "<=" | ">" | ">=" | "IN" | "IS"
    simple_expression: $ => seq(
      optional(choice(
        $.kPlus,
        $.kMinus
      )),
      $.term,
      repeat(seq(
        $.add_operator, $.term
      ))
    ),

    // add_operator = "+" | "-" | "OR"
    term: $ => seq(
      $.factor, repeat(seq($.mul_operator, $.factor))
    ),

    // mul_operator = "*" | "/" | "DIV" | "MOD" | "&"
    factor: $ => choice(
      $.number,
      $.string,
      $.kNil,
      $.kTrue,
      $.kFalse,
      $.set,
      seq($.designator, optional($.actual_params)),
      seq('(', $.expression, ')'),
      seq('~', $.factor)
    ),

    // designator = qualident {selector}
    string: $ => token(string_literal),
    // number = integer | real
    number: $ => choice($.integer, token(real)),

    // integer = digit {digit} | digit {hex_digit} "H"
    integer: $ => choice(
      token(seq(digit, repeat(digit))),
      token(seq(hex_digit, 'H'))
    ),
    
    // mathematical operators
    kStar:  $ => '*',
    kOf: $ => 'OF',
    kTo: $ => 'TO',

    kEnd: $ => 'END',
    kVar: $ => 'VAR',
    kType: $ => 'TYPE',

    kArray: $ => 'ARRAY',
    kConst: $ => 'CONST',
    kImport: $ => 'IMPORT',
    kModule: $ => 'MODULE',
    kRecord: $ => 'RECORD',
    kPointer: $ => 'POINTER',

    ident: $ => token(identifier),

    comment: $ => token(seq(/[(][*]([^*]*[*]+[^)*])*[^*]*[*]+[)]/)),
  }
});
