grammars/tree-sitter-oberon2/test/corpus/module.txt
====
module
====

MODULE Hello;
END Hello.
---

(module 
  (module_header
    (kModule)
    (ident)) 
  (module_footer
    (kEnd)
    (ident)))

====================
module single import
====================

MODULE Hello;
  IMPORT In;
END Hello.
---

(module 
  (module_header
    (kModule)
    (ident)) 
  (import_list
    (kImport)
    (import
      (ident)))
  (module_footer
    (kEnd)
    (ident)))

===============================
module single import with alias
===============================

MODULE Hello;
  IMPORT In := IOIn;
END Hello.
---

(module 
  (module_header
    (kModule)
    (ident)) 
  (import_list
    (kImport)
    (import
      (ident)
      (ident)))
  (module_footer
    (kEnd)
    (ident)))
=====================================
module import with re-export marker
=====================================

MODULE Hello;
  IMPORT e * := Exec;
END Hello.
---

(module 
  (module_header
    (kModule)
    (ident)) 
  (import_list
    (kImport)
    (import
      (ident)
      (ident)))
  (module_footer
    (kEnd)
    (ident)))

=====================================
module import with colon rename
=====================================

MODULE Hello;
  IMPORT e: Exec;
END Hello.
---

(module
  (module_header
    (kModule)
    (ident))
  (import_list
    (kImport)
    (import
      (ident)
      (ident)))
  (module_footer
    (kEnd)
    (ident)))

====================
module system flag
====================

MODULE [2] Hello;
END Hello.
---

(module
  (module_header
    (kModule)
    (sysflag
      (integer))
    (ident))
  (module_footer
    (kEnd)
    (ident)))
